After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 62109 - Font attributes lost when formatted via menu Format->Cells...
Font attributes lost when formatted via menu Format->Cells...
Status: RESOLVED FIXED
Product: Gnumeric
Classification: Applications
Component: GUI
git master
Other All
: Normal normal
: ---
Assigned To: Jody Goldberg
Jody Goldberg
Depends on:
Blocks:
 
 
Reported: 2001-10-10 23:17 UTC by mjkeppy
Modified: 2004-12-22 21:47 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description mjkeppy 2001-10-10 23:17:32 UTC
Certain font attributes (bold, italic, underline, color) are lost when a
group of cells with varying font attributes are formatted using menu
Format->Cells...

To Reproduce: Open a new sheet.  Enter values/text in column A rows 1..5. 
Make cell A3 bold.  Highlight column A and select menu item
Format->Cells... and use the Alignment tab to make the column right
justfied.  Note that A3 is no longer bold.

Curiously, the equivalent operation performed via the format toolbar works
properly.
Comment 1 Jody Goldberg 2001-10-11 01:38:05 UTC
Doh!  I owe you a beer for finding the oldest stupid bug so far.  This behavior
has been around for two years without our ever noticing.  The fix is trivial we
we just being silly.  Patch will be in CVS shortly.